tests/lean/439.lean.expected.out
fn : {p : P} → Bar.fn p
439.lean:20:7-20:12: error: function expected at
  Fn.imp.{imax u ?u} fn ?m
term has type
  Bar.fn.{u, ?u} (P := P) ?m
439.lean:31:7-31:11: error: function expected at
  Fn.imp.{imax u ?u} fn ?m
term has type
  Bar.fn.{u, ?u} (P := P) ?m
Fn.imp.{imax u u_1} fn : Bar.fn p
Fn.imp.{imax u u_1} fn' Bp : Bar.fn p
439.lean:41:7-41:12: error: application type mismatch
  Fn.imp.{imax u ?u} fn' ?m p
argument
  p
has type
  P : Sort u
but is expected to have type
  Bar.fn.{u, ?u} (P := P) ?m : Sort ?u
